data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_770.wast
;; 1. **Test with Undefined Label Index:**    - Construct a module with a `br` instruction that references a label index that is not defined within the structured control instructions.    - Reasoning: This tests the proper handling of undefined labels in the context. An improper label lookup could result in an invalid or inconsistent CFG.    - Relation to CFG: This would directly cause the CFG to have an invalid node, leading to potential runtime errors.

(assert_invalid
  (module (func $test-undefined-label (block (br 2))))
  "unknown label"
)